crates/a2s/tests/snapshots/snapshot_test__info_app70.snap
---
source: crates/a2s/tests/snapshot_test.rs
assertion_line: 42
expression: info
---
Info {
    protocol: 48,
    name: "Coralie",
    map: "outcry!",
    folder: "valve",
    game: "Half-Life",
    app_id: 70,
    players: 0,
    max_players: 16,
    bots: 0,
    server_type: Dedicated,
    server_os: Linux,
    visibility: false,
    vac: true,
    the_ship: None,
    version: "1.1.2.2/Stdio",
    edf: 177,
    extended_server_info: ExtendedServerInfo {
        port: Some(
            27015,
        ),
        steam_id: Some(
            90276872898144271,
        ),
        keywords: Some(
            "",
        ),
        game_id: Some(
            70,
        ),
    },
    source_tv: None,
}
